--- a/iMasters/index.html
+++ b/iMasters/index.html
@@ -17,12 +17,15 @@
 		<!-- <link rel="stylesheet" href="../lib/css/zenburn.css"> -->
 
 		<!-- Printing and PDF exports -->
+		<!-- If the query includes 'print-pdf', include the PDF print sheet -->
 		<script>
-			var link = document.createElement( 'link' );
-			link.rel = '../stylesheet';
-			link.type = '../text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? '../css/print/pdf.css' : '../css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
+		  if( window.location.search.match( /print-pdf/gi ) ) {
+		    var link = document.createElement( 'link' );
+		    link.rel = '../stylesheet';
+		    link.type = '../text/css';
+		    link.href = '../reveal.js/css/print/pdf.css';
+		    document.getElementsByTagName( 'head' )[0].appendChild( link );
+		  }
 		</script>
 	</head>
 	<body>
