--- a/iMasters/client/index.html
+++ b/iMasters/client/index.html
@@ -235,7 +235,7 @@ custom: [
         // Example values. To generate your own, see the socket.io server instructions.
 		secret: null, // null so the clients do not have control of the master presentation
 		id: '1ea875674b17ca76', // id, obtained from socket.io server
-		url: 'https://sinesio.com.br:80' // Location of socket.io server
+		url: 'https://reveal-js-multiplex-ccjbegmaii.now.sh' // Location of socket.io server
         },
 
 
