--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
+					<section data-autoslide="2000">
+							<p>After 2 seconds the first fragment will be shown.</p>
+							<p class="fragment" data-autoslide="10000">After 10 seconds the next fragment will be shown.</p>
+							<p class="fragment">Now, the fragment is displayed for 2 seconds before the next slide is shown.</p>
+						</section>
 				<section>Slide 2</section>
 				<section>
 					<h3 align="left">Biological Evolution</h3>
