--- a/iMasters/1.html
+++ b/iMasters/1.html
@@ -12,6 +12,7 @@
                     <h4 class="fragment">
                         {Aplicações móveis híbridas} 
 					</h4> 
+					<h2>By. Sinesio Bittencourt - Vancouver/Canadá</h2>
 					
             </div>                        
 		
