--- a/iMasters/1.html
+++ b/iMasters/1.html
@@ -1,13 +1,23 @@
 <style>
 		.teste {
-			background-image: url("http://www.clickgratis.com.br/fotos-imagens/imagens/aHR0cHM6Ly9zaW1nLm1pbmhhdGVjYS5jb20uYnIvMjliN2RhMDQwMjE0ZmU2NTI2MzBkZjQwMzJlMWEwMmU5MGNiOTQ3OT91cmw9aHR0cCUzQSUyRiUyRmk2Mi50aW55cGljLmNvbSUyRjJtdzlrcjkuanBn.jpg");
+			/* background-image: url("http://www.clickgratis.com.br/fotos-imagens/imagens/aHR0cHM6Ly9zaW1nLm1pbmhhdGVjYS5jb20uYnIvMjliN2RhMDQwMjE0ZmU2NTI2MzBkZjQwMzJlMWEwMmU5MGNiOTQ3OT91cmw9aHR0cCUzQSUyRiUyRmk2Mi50aW55cGljLmNvbSUyRjJtdzlrcjkuanBn.jpg"); */
+			background-color:#000;
 		}
 		</style>
 
 
-            <div align="center" id="teste">
+            <div align="center" class="teste">
+				<style>
+					.body{
+						background: #0EB337 !important;
+					}	
+				</style>
                     <h1>
-					 Ionic framework
+							<script type="text/template">
+								<!-- .slide:  -->
+									Markdown content
+								</script>
+					<span class="teste">Ionic framework OI </span> 
                     </h1>
                     <h4 class="fragment">
                         {Aplicações móveis híbridas} 
